--- a/Flex Box/index.html
+++ b/Flex Box/index.html
@@ -13,12 +13,20 @@
 <body>
     <h1>Let's Play With Flexbox</h1>
 
-    <section id="container">
+    <!-- <section id="container">
         <div style="background-color: #80ffdb">H</div>
         <div style="background-color: #64dfdf">E</div>
         <div style="background-color: #48bfe3; height: 150px">L</div>
         <div style="background-color: #5390d9; height: 300px">L</div>
         <div style="background-color: #6930c3; height: 220px">O</div>
+    </section> -->
+
+    <section id="container">
+        <div style="background-color: #80ffdb"></div>
+        <div style="background-color: #64dfdf"></div>
+        <div style="background-color: #48bfe3"></div>
+        <div style="background-color: #5390d9"></div>
+        <div style="background-color: #6930c3"></div>
     </section>
 
 </body>
