--- a/Practice/index.html
+++ b/Practice/index.html
@@ -18,7 +18,7 @@
         <div></div>
     </section>
 
-    <script src="app.js" async defer></script>
+    <script src="app1.js" async defer></script>
 </body>
 
 </html>
